--- a/resources/main.css
+++ b/resources/main.css
@@ -3,19 +3,39 @@ html, body {
 	margin: 0; 
 	padding: 0; 
 }
+p{
+font-family: 'Poppins', sans-serif;
+  font-size: 50px;
+  color: white;
+  line-height: 0px;
+
+}
 
 #map { 
 	height: 100%; 
 }
-
+/*
 #header {
   height: 100px;
   background-color: #F00;
   position: fixed;
   float: right;
+}*/
+
+#floating-top-panel{
+  position: fixed;
+  top: 0px;
+  height: 100px;
+  /*z-index: 5;*/
+  width: 100%;
+  background-color: #ff3333;
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+
 }
 
-#floating-bottom-panel {
+#floating-panel {
   position: fixed;
   bottom: 0px;
   /*left: 42%;*/
@@ -31,12 +51,14 @@ html, body {
   line-height: 30px;
   padding-left: 10px;
   padding-right: 10px;
-  height: 5%;
+
 }
 
 #homButton {
+  font-family: 'Poppins', sans-serif;
   background-color: white;
-  border-color:white;
+  border-color: white;
+  border-style: solid;
   border-radius: 15px;
   color: red;
   width: 7em;
@@ -45,8 +67,10 @@ html, body {
 }
 
 #robButton {
+  font-family: 'Poppins', sans-serif;
   background-color: white;
   border-color:white;
+  border-style: solid;
   border-radius: 15px;
   color: red;
   width: 7em;
@@ -55,13 +79,16 @@ html, body {
 }
 
 #assaultButton {
+  font-family: 'Poppins', sans-serif;
   background-color: white;
+  border-style: solid;
   border-color:white;
   border-radius: 15px;
   color: red;
   width: 7em;
   height: 3em;
-  margin: 8px;
+  margin: 10px;
+
 }
 
 .controlUI {
@@ -78,59 +105,9 @@ html, body {
 
 .controlText {
   color: rgb(25,25,25);
-  font-family: 'Roboto', Arial,'sans-serif';
+  font-family: 'Roboto',Arial,'sans-serif';
   font-size: 16px;
   line-height: 38px;
   padding-left: 5px;
   padding-right: 5px;
-}
-
-.controls {
-  margin-top: 10px;
-  border: 1px solid transparent;
-  border-radius: 2px 0 0 2px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  height: 32px;
-  outline: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-}
-
-#pac-input {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 300px;
-}
-
-#pac-input:focus {
-  border-color: #4d90fe;
-}
-
-.pac-container {
-  font-family: Roboto;
-}
-
-#type-selector {
-  color: #fff;
-  background-color: #4d90fe;
-  padding: 5px 11px 0px 11px;
-}
-
-#type-selector label {
-  font-family: Roboto;
-  font-size: 13px;
-  font-weight: 300;
-}
-
-#target {
-  width: 345px;
-}
-
-#map {
-  height: 92.5%;
 }
