--- a/resources/main.css
+++ b/resources/main.css
@@ -22,6 +22,11 @@ p {
   padding: 0px;
   margin: 0px;
   text-align: center;
+  -webkit-user-select: none; /* Chrome/Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 
 #floating-panel {
