--- a/resources/main.css
+++ b/resources/main.css
@@ -46,6 +46,11 @@ p {
   overflow: hidden;
   margin-bottom: 0;
   vertical-align: middle;
+  -webkit-user-select: none; /* Chrome/Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
 }
 
 #homButton {
